# mantisbase-admin

./: .gitkeep  CMakeLists.txt  README.md  next.config.mjs  package-lock.json  package.json  plan.md
.github/workflows/: release-static.yml
app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
app/[...slug]/: page.tsx
app/[[...slug]]/: error.tsx  page.tsx
components/: admin-dashboard.tsx  login-form.tsx  logo.tsx  main-page.tsx  setup-form.tsx  theme-provider.tsx  theme-toggle.tsx
components/admins/: admins-section.tsx  change-password-dialog.tsx
components/database/: add-item-drawer.tsx  add-table-dialog.tsx  column-visibility-dropdown.tsx  database-section.tsx  edit-item-drawer.tsx  table-config-drawer.tsx  table-detail-view.tsx  table-docs-drawer.tsx  table-records-docs-drawer.tsx
components/logs/: logs-section.tsx
components/settings/: settings-section.tsx
components/sync/: sync-section.tsx
lib/: api.ts  router.ts  schema-constraints.ts
public/: 404.html  index.html  index.txt
public/404/: index.html
public/_next/static/chunks/: 183-566352dfb5c1849a.js  206-0745322147448b7b.js  262-e19eb75044091129.js  316-732b02306fb2e403.js  537-75e5677e23e6eb8f.js  684-5f30333fcac1a14d.js  684-c3f24fd0ed5a3a48.js  730-ad1f6f2bf7c605cd.js  826-1f1969abb491d021.js  944-09267b5c66bd44f7.js  944-7483e88a953f0844.js  944-9c9eabd4b24aeb10.js  944-9d8df1815b1d7a8e.js  944-acd917b7f368cce7.js  944-d9d39633c6008880.js  944-f50bf91fdbef2463.js  944-f84e5c10c96313eb.js  main-316241880c139805.js  main-59b22db38ae53f68.js  webpack-26dee044c1a0f8be.js  (+2 more)
public/admins/: index.html  index.txt
public/entities/: index.html  index.txt
public/entities/students/: index.html  index.txt
public/login/: index.html  index.txt
public/logs/: index.html  index.txt
public/settings/: index.html  index.txt
public/setup/: index.html  index.txt
(+20 files in other folders)
